@@ -24,6 +24,9 @@
        <property name="text">
         <string>Filename:</string>
        </property>
+       <property name="buddy">
+        <cstring>filenameLabel</cstring>
+       </property>
       </widget>
      </item>
      <item row="0" column="1">
@@ -31,8 +34,8 @@
        <property name="text">
         <string notr="true">TextLabel</string>
        </property>
-       <property name="textInteractionFlags">
-         <set>Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard</set>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
        </property>
       </widget>
      </item>
@@ -48,8 +51,8 @@
        <property name="text">
         <string notr="true">TextLabel</string>
        </property>
-       <property name="textInteractionFlags">
-         <set>Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard</set>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
        </property>
       </widget>
      </item>
@@ -65,8 +68,8 @@
        <property name="text">
         <string notr="true">TextLabel</string>
        </property>
-       <property name="textInteractionFlags">
-         <set>Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard</set>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
        </property>
       </widget>
      </item>
@@ -82,8 +85,8 @@
        <property name="text">
         <string notr="true">TextLabel</string>
        </property>
-       <property name="textInteractionFlags">
-         <set>Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard</set>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
        </property>
       </widget>
      </item>
@@ -102,6 +105,12 @@
        <property name="format">
         <string notr="true">%p%</string>
        </property>
+       <property name="accessibleName">
+        <string>Transfer progress</string>
+       </property>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
+       </property>
       </widget>
      </item>
      <item>
@@ -112,8 +121,8 @@
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
-       <property name="textInteractionFlags">
-         <set>Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard</set>
+       <property name="focusPolicy">
+        <set>Qt::StrongFocus</set>
        </property>
       </widget>
      </item>
