@@ -1178,8 +1178,8 @@
               <property name="wordWrap">
                <bool>true</bool>
               </property>
-              <property name="textInteractionFlags">
-               <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+              <property name="focusPolicy">
+               <set>Qt::StrongFocus</set>
               </property>
              </widget>
             </item>
@@ -1221,8 +1221,8 @@
               <property name="wordWrap">
                <bool>true</bool>
               </property>
-              <property name="textInteractionFlags">
-               <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+              <property name="focusPolicy">
+               <set>Qt::StrongFocus</set>
               </property>
              </widget>
             </item>
