@@ -27,6 +27,8 @@ Default Qt Client
 - Context menu to move banned/unbanned users to banned/unbanned list
 - Ability to search by IP or username in "Banned Users" dialog
 - Ban time displays in local format
+- "Voice level" progress bar in Main Window can now get focus
+- Transfer progress bar in "File Transfer" dialog can now get focus
 - Locale file size now also use in "file transfer" dialog
 - Unic dialog to enter username and password on login error and channel share
 - Ability to show password on login error, channel password, channel operator password, and channel share
